# distt

./: README.txt  distt  distt-publish  pyproject.toml  qa.txt  setup
.cursor/rules/: nanodoc.mdc  shell.mdc
.github/release-assets/: release-notes.md
.github/workflows/: distribute.yml  event.json  publish.yml  release.yml
Formula/: nanodoc.rb
common/: distributor.py  distt-publish.py  distt.py  new-release.py  publisher.py
distribute/brew/: pypi-to-brew
lib/install/: Brewfile
nanodoc/: __init__.py  cli.py
py-release/: setup
py-release/apt/: build  publish  verify
py-release/apt/lib/: apt_utils.sh  pypi-to-apt  repo_utils.sh
py-release/apt/test/: test_apt.sh
py-release/brew/: build  check  publish  verify
py-release/brew/lib/: brew_utils.sh  pypi-to-brew
py-release/brew/test/: test_brew.sh
py-release/common/: new-release.py  pypi-package-info
py-release/github/: build  check  publish  verify
py-release/github/lib/: github_utils.sh
py-release/github/workflows/: release.yml
py-release/lib/: common.sh
py-release/pypi/: build  check  publish  verify
py-release/pypi/lib/: pypi_utils.sh
